--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "mime": "^3.0.0",
     "next": "13.0.2",
+    "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "@types/react": "18.0.25"
   }
 }
