--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.0.2",
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
