--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "formidable": "^2.1.1",
     "mime": "^3.0.0",
     "next": "13.0.2",
     "nft.storage": "^7.0.0",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "@types/react": "18.0.25"
+    "@types/react": "18.0.25",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
