--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mime": "^3.0.0",
     "next": "13.0.2",
     "nft.storage": "^7.0.0",
+    "openai": "^3.1.0",
     "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
