--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3modal/ethereum": "^2.0.0-rc.3",
+    "@web3modal/react": "^2.0.0-rc.3",
     "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "ethers": "^5.7.2",
     "formidable": "^2.1.1",
     "mime": "^3.0.0",
     "next": "13.0.2",
@@ -20,7 +23,8 @@
     "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "wagmi": "^0.10.10"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
