--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.7.2",
     "formidable": "^2.1.1",
     "mime": "^3.0.0",
+    "multiformats": "^11.0.1",
     "next": "13.0.2",
     "nft.storage": "^7.0.0",
     "openai": "^3.1.0",
